@@ -287,3 +287,8 @@ telegram=|6044B8059430040001037A1D005085E2B670BCF1A5C87E0C1A51DA18924EF984613DA2
 telegram=|8E44B409747372710B0D7A798080052F2F|0C0E59600100046D1D36B9290C13679947000C0E000000000C13590000000C13000000000C13000000000A5A18020A5E11020F823D06003D06003D06003D0600140600620500480400E402001601000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002F2F|
 {"media":"heat/cooling load","meter":"hydrocalm3","name":"HeatCool","id":"71727374","total_heating_kwh":4460.833333,"total_cooling_kwh":0,"device_date_time":"2021-09-25 22:29","total_heating_m3":0.059,"total_cooling_m3":0,"total_cooling_m3":0,"supply_volume_m3":0,"return_volume_m3":0,"supply_temperature_c":21.8,"return_temperature_c":21.8,"timestamp":"1111-11-11T11:11:11Z"}
 |HeatCool;71727374;4460.833333;0.000000;1111-11-11 11:11.11
+
+# Test Weptech Munia temperature hygrometer
+telegram=|2E44B05C82340100021B7A460000002F2F0A6601020AFB1A570602FD971D00002F2F2F2F2F2F2F2F2F2F2F2F2F2F2F|
+{"media":"room sensor","meter":"munia","name":"TempoHygro","id":"00013482","current_temperature_c":20.1,"current_relative_humidity_rh":65.7,"timestamp":"1111-11-11T11:11:11Z"}
+|TempoHygro;00013482;20.100000;65.700000;1111-11-11 11:11.11
